--- a/src/tex/applications.tex
+++ b/src/tex/applications.tex
@@ -168,11 +168,8 @@ In \cite{Cho_2014}, Extended Kalman Filter (EKF) is implemented in order to impr
     
     \item Movement Classification: It is the only goal of tracking is to know if the target is a moving or non-moving object. There are several scenarios of moving object. One object can move continuously, it may move a little bit and stop or stop a little bit then start. To track all of the scenarios, a series of states of a moving objects needs to be keep. In \cite{Cho_2014}, two movement flags are introduced. One is the movement history i.e., observed moving and not observed moving and another on is the movement state, i.e., moving and not moving\cite{Cho_2014}. As radar has build in functionality to track the moving objects, radar is the key component of tracking. Also the motion is compared with a threshold which is statistically determined by testing various vehicles. The movement history classification, the distance traveled is computed from the last time stamp that the object has been classified as not observed moving\cite{Cho_2014}. Here, the distance is also compared with a threshold. Though it is hard to find out the perfect threshold value, it is possible to get an realistic optimal value.
 \end{enumerate}
-
-
 \subsubsection{Experimental Outcome}
 The improved version of the tracking system shows a very good performance in real time\cite{Cho_2014}. Some improved cases are described in the following. When a vehicle is tracked in the range of 150m, the tracking system track it as a point model. But when the vehicle comes near at least 40m from the host vehicle the tracking system automatically tracked it as a 3D box model. It is one of the most important feature of self driving car. Because the car should know the exact dimension of the moving object as it come near or go far\cite{Cho_2014}. On the other hand, for pedestrians/bicyclists the range is up to 20m on the experiment vehicle's path.
-
 \section{Sensor-Independent Fusion Approach}
 In the area of "Autonomous Driving", it is a very basic idea to use multiple sensors and to fuse the sensors data to determine something which can not be determined by just evaluating the sensors data separately. The sensors are hardware module which are accessed by a very complex software module to handle the sensor data and operate the vehicle. Meanwhile, different sensors module may have different software dependency which makes the changeability of sensor harder. There could be several reasons to change the sensors, but the main two reasons are: 
 \begin{enumerate}
@@ -193,7 +190,20 @@ Three sensors are installed in the experiment vehicle. They are installed in a w
   \label{fig:sensor_covarage_Independent}
 \end{figure}
 \subsection{Sensor Fusion}
-According to \cite{Kunz_2015}, in a multi-sensor system it is highly recommended to utilize all of the sensors data. One sensor may recover the draw backs of other sensors. For example, A radar has build in functionality to give accurately the position and velocity of moving object. But the yaw angle is uncertain. To recover this drawback of radar we could use a mono camera which can not provide velocity information but it can provide an accurate yaw angle.
+According to \cite{Kunz_2015}, in a multi-sensor system it is highly recommended to utilize all of the sensors data. One sensor may recover the draw backs of other sensors. For example, A radar has build in functionality to give accurately the position and velocity of moving object. But the yaw angle is uncertain. To recover this drawback of radar we could use a mono camera which can not provide velocity information but it can provide an accurate yaw angle. Though the direct coupling of sensors enables the system to get complete information, it makes the system sensor dependent\cite{Kunz_2015}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.6\textwidth]{src/pic/kunz_PS.png}
+  \caption{Perception System Overview \cite{Kunz_2015}}
+  \label{fig:kunz_PS}
+\end{figure}
+The proposed perception system in \cite{Kunz_2015} is a hierarchical modular environment perception system (HMEP). There are three layers of HMEP, they are: grid mapping, localization and object tracking. The fusion is applied in each layer individually with the sensor data and as a result each layer produces an element of the environment model. It is also allowed that one perception layer use the produced data from another layer in addition to sensor data. But this design is not deadlock free. To make it deadlock free the layers are designed hierarchically and it is only allowed that the results of lower layers may be used by the upper layers. The order is determined by the abstraction level of the environment model element. For example, tracked objects are the final abstract environment model and placed in the highest order. Meanwhile, the results from the perception layers could be redundant or even contradictory\cite{Kunz_2015}. To resolve this problem, a combination module is introduced which combines all elements to a consistent environmental model\cite{Kunz_2015}. The combination module expects that the result produced in the perception layers are probabilistic. For example, the results should contains the information of uncertainty\cite{Kunz_2015}. Moreover, the independent senor fusion needs some generic sensor interfaces which must be provided by the individual layers. The generic sensor interfaces enable the system to replace or enhance with sensors of same or even different types without changing the core of sensor fusion which is the main goal of this perception system.
+
+\begin{enumerate}[label=\Alph*]
+    \item Grid Mapping Layer: This layer turns the environment model into single grid cells and estimates each cells that how much the cell is occupied with the environment object\cite{Kunz_2015}. Classical occupancy grid mapping approach is followed for grid mapping which are not compatible for dynamic environments\cite{Kunz_2015}. Therefore, an improved  grid map is implemented which is capable of quickly adapting current situation. In the real implementation, the data of the three laser scanners is used as input. Actually, the grid map is used by the combination module to estimate static boundaries. New sensors can be integrated into the grid mapping layer by creating an inverse sensor model for the sensor as pre-processing filter as shown in Figure [grid-mapping]\cite{Kunz_2015}. The inverse sensor model determines the probability of occupancy of each grid cell by evaluating the sensor output which is called a measurement grid. In a nutshell, the grid mapping produce the result of estimated occupancy probability of every cell in the grid\cite{Kunz_2015}.
+    \item Localization Layer: 
+\end{enumerate}
 
 
 \subsection{Experimental Outcome}
